# ynab-import

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  WORKFLOW_GUIDE.md  main.py  pyproject.toml  run_cli.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  staging-to-main.yml
docs/specs/: IMPLEMENTATION_PLAN.md  SPECIFICATION.md  TASKS.md
src/ynab_import/: __init__.py
src/ynab_import/cli/: menus.py
src/ynab_import/core/: config.py
tests/: test_clean_input.py  test_config.py  test_csv_diagnostics.py  test_data_converter.py  test_data_reader.py  test_version.py  test_writers.py
tests/sample_files/: presets.json
