[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ynab-import"
version = "0.1.0"
description = "Command line application for converting bank export files to YNAB csv format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "openpyxl>=3.1.0",
    "ipykernel>=6.30.1",
    "xlrd>=2.0.2",
    "questionary>=2.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "platformdirs>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ynab_import"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
[project.scripts]
ynab-import = "ynab_import.cli.menus:main_menu"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ipykernel",
]

[tool.pyright]
reportMissingTypeStubs = "off"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"



[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "csv: marks tests as CSV-related (deselect with '-m \"not csv\"')",
    "excel: marks tests as Excel-related (deselect with '-m \"not excel\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
